[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tlnw-generate-image"
version = "0.1.0"
description = "Generate illustrations and images dynamically using OpenAI DALL-E and Google Imagen models."
readme = "README.md"
authors = [
    { name = "Tellers Network", email = "info@tellersnetwork.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pillow>=9.0.0",
    "python-dotenv>=0.19.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
generate-image = "tlnw_generate_image.cli:main"

[tool.setuptools]
packages = ["tlnw_generate_image"]
